# sendmail-cloud-function

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  config.py  dev-requirements.txt  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  schema.proto  send-mail-message.json  setup.py  test_main.py
function/: config.py  controllers.py  exceptions.py  integrations.py  main.py  models.py  requirements.txt  responses.py  schemas.py  transaction_log.py  utils.py
function/cloudfunc/: config.py  controllers.py  exceptions.py  models.py  utils.py
function/send_mail/: config.py  controllers.py  dtos.py  exceptions.py  integrations.py  schemas.py
producer/: __init__.py  requirements.txt  send.py
scripts/: test.sh
tests/: conftest.py  requirements-test.txt  test_config.py  test_controller.py  test_exceptions.py  test_integrations.py  test_main.py  test_utils.py
